// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TicTacToe generates complete TypeScript output: tictactoe-complete-output 1`] = `
"import { z } from "zod";
import type { PathFn, HeaderFn, OperationDefinition, OperationErrors } from "zenko";

// Generated Zod Schemas

export const errorMessage = z.string();

export type errorMessage = z.infer<typeof errorMessage>;

export const coordinate = z.number().int();

export type coordinate = z.infer<typeof coordinate>;

export const mark = z.enum([".", "X", "O"]);

export type mark = z.infer<typeof mark>;

export const board = z.array(z.array(mark));

export type board = z.infer<typeof board>;

export const winner = z.enum([".", "X", "O"]);

export type winner = z.infer<typeof winner>;

export const status = z.object({
  winner: winner.optional(),
  board: board.optional(),
});

export type status = z.infer<typeof status>;

// Path Functions
export const paths = {
  get-board: () => "/board",
  get-square: ({ row, column }: { row: string, column: string }) => \`/board/\${row}/\${column}\`,
  put-square: ({ row, column }: { row: string, column: string }) => \`/board/\${row}/\${column}\`,
} as const;

// Header Functions
export const headers = {
  get-board: () => ({}),
  get-square: () => ({}),
  put-square: () => ({}),
} as const;

// Operation Objects
export const get-board = {
  method: "get",
  path: paths.get-board,
  response: status,
} as const;

export const get-square = {
  method: "get",
  path: paths.get-square,
  response: mark,
  errors: {
    clientErrors: {
      badRequest: errorMessage,
    },
  },
} as const;

export const put-square = {
  method: "put",
  path: paths.put-square,
  request: mark,
  response: status,
  errors: {
    clientErrors: {
      badRequest: errorMessage,
    },
  },
} as const;

// Operation Types
export type Get-boardOperation = OperationDefinition<
  "get",
  typeof paths.get-board,
  undefined,
  typeof status,
  undefined,
  OperationErrors
>;

export type Get-squareOperation = OperationDefinition<
  "get",
  typeof paths.get-square,
  undefined,
  typeof mark,
  undefined,
  OperationErrors<{ badRequest: typeof errorMessage }, unknown, unknown, unknown>
>;

export type Put-squareOperation = OperationDefinition<
  "put",
  typeof paths.put-square,
  typeof mark,
  typeof status,
  undefined,
  OperationErrors<{ badRequest: typeof errorMessage }, unknown, unknown, unknown>
>;
"
`;

exports[`TicTacToe generates complete TypeScript output with strict options: tictactoe-complete-output 1`] = `
"import { z } from "zod";
import type { PathFn, HeaderFn, OperationDefinition, OperationErrors } from "zenko";

// Generated Zod Schemas

export const errorMessage = z.string().max(256);

export type errorMessage = z.infer<typeof errorMessage>;

export const coordinate = z.number().min(1).max(3).int();

export type coordinate = z.infer<typeof coordinate>;

export const mark = z.enum([".", "X", "O"]);

export type mark = z.infer<typeof mark>;

export const board = z.array(z.array(mark)).min(3).max(3);

export type board = z.infer<typeof board>;

export const winner = z.enum([".", "X", "O"]);

export type winner = z.infer<typeof winner>;

export const status = z.object({
  winner: winner.optional(),
  board: board.optional(),
});

export type status = z.infer<typeof status>;

// Path Functions
export const paths = {
  get-board: () => "/board",
  get-square: ({ row, column }: { row: string, column: string }) => \`/board/\${row}/\${column}\`,
  put-square: ({ row, column }: { row: string, column: string }) => \`/board/\${row}/\${column}\`,
} as const;

// Header Functions
export const headers = {
  get-board: () => ({}),
  get-square: () => ({}),
  put-square: () => ({}),
} as const;

// Operation Objects
export const get-board = {
  method: "get",
  path: paths.get-board,
  response: status,
} as const;

export const get-square = {
  method: "get",
  path: paths.get-square,
  response: mark,
  errors: {
    clientErrors: {
      badRequest: errorMessage,
    },
  },
} as const;

export const put-square = {
  method: "put",
  path: paths.put-square,
  request: mark,
  response: status,
  errors: {
    clientErrors: {
      badRequest: errorMessage,
    },
  },
} as const;

// Operation Types
export type Get-boardOperation = OperationDefinition<
  "get",
  typeof paths.get-board,
  undefined,
  typeof status,
  undefined,
  OperationErrors
>;

export type Get-squareOperation = OperationDefinition<
  "get",
  typeof paths.get-square,
  undefined,
  typeof mark,
  undefined,
  OperationErrors<{ badRequest: typeof errorMessage }, unknown, unknown, unknown>
>;

export type Put-squareOperation = OperationDefinition<
  "put",
  typeof paths.put-square,
  typeof mark,
  typeof status,
  undefined,
  OperationErrors<{ badRequest: typeof errorMessage }, unknown, unknown, unknown>
>;
"
`;
